bk_ida/gccida/c0/form_sum
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5480:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5481:4: error: expected ';' after expression
rtx ya; // [rsp+18h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5481:5: error: use of undeclared identifier 'ya'
rtx ya; // [rsp+18h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5482:4: error: expected ';' after expression
rtx xa; // [rsp+20h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5482:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+20h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5484:1: error: use of undeclared identifier 'xa'
xa = x; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5485:1: error: use of undeclared identifier 'ya'
ya = y; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5509:1: error: use of undeclared identifier 'xa'
xa = y; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5510:1: error: use of undeclared identifier 'ya'
ya = x; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5512:37: error: use of undeclared identifier 'xa'
if ( ( unsigned __int16)*( _DWORD *)xa == 75 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5513:40: error: use of undeclared identifier 'xa'
&& ( ( unsigned __int16)**( _DWORD **)&xa[1] == 67 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5514:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 68 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5515:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 54 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5516:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 55 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5517:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 58 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5518:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 134 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5519:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 56 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5520:38: error: use of undeclared identifier 'xa'
|| ( unsigned __int16)**( _DWORD **)&xa[1] == 140) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/reload.c:5522:7: error: use of undeclared identifier 'xa'
rtx = xa->fld[0].rtx; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/form_sum/src/obj/reload.o] Error 1
